@@ -1194,6 +1194,12 @@ command to generate the output files.
     <generic-icon name="x-office-document"/>
     <glob pattern="*.cb7"/>
   </mime-type>
+  <mime-type type="application/x-cbt">
+    <_comment>comic book archive</_comment>
+    <sub-class-of type="application/x-tar"/>
+    <generic-icon name="x-office-document"/>
+    <glob pattern="*.cbt"/>
+  </mime-type>
   <mime-type type="application/x-cbz">
     <_comment>comic book archive</_comment>
     <sub-class-of type="application/zip"/>
