@@ -1,3 +1,11 @@
+2009-10-06  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in:
+	* tests/archive.tar:
+	* tests/comics.cbt:
+	* tests/list: Add cbt (tarred-up Comic Books),
+	patch from juanj.marin@juntadeandalucia.es (Closes: #22724)
+
 2009-10-06  David Faure  <faure@kde.org>
 
 	* freedesktop.org.xml.in: Add kexi mimetypes (from #18109)
